fix a bug where expertise heading created a wrong white space beacuse of the margin-top

--- a/django-website/wheelie/client/scss/layout/landing/_landing_expertise.scss
+++ b/django-website/wheelie/client/scss/layout/landing/_landing_expertise.scss
@@ -4,6 +4,7 @@
   position: relative;
 
   @media #{$small}, #{$medium} {
+    padding-top: 4.236em;
     height: auto;
   }
 }
@@ -25,7 +26,6 @@
   width: 560px;
 
   @media #{$small}, #{$medium}, #{$large} {
-    margin-top: 6.853em;
     position: relative;
     top: 0;
   }
